--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "clarifai": "^2.9.0",
     "expo": "^30.0.1",
     "native-base": "^2.8.1",
     "react": "16.3.1",
